Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriBooleanRetNumObj.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        boolean two = true
        Yoda<Boolean, boolean, Number> yoda
        Number ret = yoda:useForce(one, two)
        output "passed"
     end
end
