Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjBooleanRettextFail.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
